# geometric-algorithms

./: .gitattributes  .gitignore  .markdownlint.json  CMakeLists.txt  README.md  vcpkg.json
Docs/p1-a/: PointCloud0.txt  d-ivanov-pr1-a.aux  d-ivanov-pr1-a.fdb_latexmk  d-ivanov-pr1-a.fls  d-ivanov-pr1-a.out  d-ivanov-pr1-a.synctex.gz.sum.synctex  d-ivanov-pr1-a.tex
Docs/p1-a/_minted-d-ivanov-pr1-a/: 8709C12B39E88E1AB9CF0162EF8DCAF13EB7A60C91F6CB2DCB30A7681B3C85D5.pygtex  BE1E4DF61CA519EA428B8C563D0171063D7E8959DBC07881C9849793F4D34061.pygtex  C8E9022F6AA5EDEFC8CD434038028DED00FDB2002C67DB3497AAECEE1A1DABF0.pygtex  F0306A8D688999BCD16A03CE34D2F5F63D7E8959DBC07881C9849793F4D34061.pygtex
Docs/p1-b/: d-ivanov-pr1-b.tex
Docs/p2/: d-ivanov-pr2.tex
Docs/p3/: d-ivanov-pr3.tex
Docs/p4/: d-ivanov-pr4.tex
Docs/p5/: d-ivanov-ray-tracing-geometry.tex
Docs/p5/common/: references.bib  title.tex
Docs/p5/figures/: accel_techniques.graphml
Resources/: App.rc.in
Resources/Shaders/: line-vs.glsl  point-vs.glsl  triangle-fs.glsl  triangle-vs.glsl
Scripts/: circle.py
Source/: Main.cpp  StdAfx.h
Source/Fonts/: FontAwesome.cpp  FontAwesome2.cpp  IconsFontAwesome5.h  Lato.cpp
Source/Geometry/: AABB.cpp  AABB.h  BasicGeometry.h  Bezier.cpp  Bezier.h  Circle.cpp  Circle.h  ConvexHull.cpp  ConvexHull.h  Edge3d.cpp  Edge3d.h  EisemannRay.cpp  EisemannRay.h  Geom2DInclude.h  Intersections3d.h  Line.cpp  Line.h  Line3d.cpp  Line3d.h  Plane.cpp  Plane.h  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  PointCloud3d.cpp  PointCloud3d.h  Polygon.cpp  Polygon.h  Ray3d.cpp  Ray3d.h  RayLine.cpp  RayLine.h  Segment3d.cpp  Segment3d.h  SegmentLine.cpp  SegmentLine.h  Triangle.cpp  Triangle.h  Triangle3d.cpp  (+17 more)
Source/Libraries/ImGuiFileDialog/: ImGuiFileDialog.h  LICENSE  README.md
Source/Patterns/: Singleton.h
Source/Rendering/: ApplicationState.h  Camera.cpp  Camera.h  CameraGuiAdapter.cpp  CameraGuiAdapter.h  CameraProjection.cpp  CameraProjection.h  Draw2DInclude.h  DrawAABB.cpp  DrawAABB.h  DrawBezier.cpp  DrawBezier.h  DrawCircle.cpp  DrawCircle.h  DrawLine.cpp  DrawLine.h  DrawMesh.cpp  DrawMesh.h  DrawPlane.cpp  DrawPlane.h  DrawPoint.cpp  DrawPoint.h  DrawPointCloud.cpp  DrawPointCloud.h  DrawPolygon.cpp  DrawPolygon.h  DrawRay.cpp  DrawRay.h  DrawSegment.cpp  DrawSegment.h  DrawTriangle.cpp  DrawTriangle.h  DrawVoxelization.cpp  DrawVoxelization.h  FBO.cpp  FBO.h  FBOScreenshot.cpp  FBOScreenshot.h  GUI.cpp  GUI.h  (+29 more)
Source/Utils/: ChronoUtilities.h  FilesystemUtilities.cpp  FilesystemUtilities.h  RandomUtilities.h
pr1a/: .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
pr1a/Resources/: App.rc.in
pr1a/Resources/Shaders/: line-fs.glsl  line-vs.glsl  point-fs.glsl  point-vs.glsl  triangle-fs.glsl  triangle-vs.glsl
pr1a/Scripts/clion_updater/: cmake_list_sources.py  update_source_files.py
pr1a/Scripts/draw_units/: circle.py
pr1a/Scripts/license_header/: attach_license.py  license  remove_license.py
pr1a/Source/: Main.cpp  StdAfx.h
pr1a/Source/Fonts/: FontAwesome.cpp  FontAwesome2.cpp  Lato.h
pr1a/Source/Geometry/: AABB.cpp  BasicGeometry.h  Circle.cpp  Circle.h  Line.cpp  Point.h  PointCloud.h  Polygon.cpp  RayLine.cpp  RayLine.h  SegmentLine.cpp  SegmentLine.h  Triangle.cpp  Triangle.h  Vect2d.h
pr1a/Source/Libraries/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
pr1a/Source/Patterns/: Singleton.h
pr1a/Source/Rendering/: ApplicationState.h  Camera.cpp  Camera.h  CameraGuiAdapter.cpp  CameraGuiAdapter.h  CameraProjection.cpp  CameraProjection.h  DrawCircle.cpp  DrawCircle.h  DrawLine.cpp  DrawLine.h  DrawMesh.cpp  DrawMesh.h  DrawPoint.cpp  DrawPoint.h  DrawPointCloud.cpp  DrawPointCloud.h  DrawPolygon.cpp  DrawPolygon.h  DrawRay.cpp  DrawRay.h  DrawSegment.cpp  DrawSegment.h  DrawTriangle.cpp  DrawTriangle.h  FBO.h  FBOScreenshot.h  GUI.cpp  GUI.h  GuiUtilities.cpp  GuiUtilities.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  InterfaceAdapter.h  Model3D.cpp  Model3D.h  Renderer.cpp  Renderer.h  (+15 more)
pr1a/Source/Utils/: ChronoUtilities.h  FilesystemUtilities.cpp  FilesystemUtilities.h  RandomUtilities.h
